# know-cli

./: .gitignore  AGENTS.md  KNOW_SKILL.md  README.md  pyproject.toml
.github/actions/know-cli/: action.yml
.github/workflows/: example-advanced.yml  example-basic.yml  publish-pypi.yml
.know/: config.yaml  knowledge.db  stats.db
.know/cache/: index.db
benchmark/: bench_agent_e2e.py  bench_dual_repo_parallel.py  bench_memory_quality.py  bench_report.py  bench_session_dedup.py  bench_token_efficiency.py  bench_workflow_relevance.py  benchmark_task.md  conftest.py  run_all.py
benchmark/answer_keys/: q1.json  q2.json  q3.json
docs/: arc.md  architecture-diff.md  architecture.md  dependencies.md  digest-compact.md  digest-llm-compact.md  digest-llm.md  onboarding-new-devs.md  onboarding-new_devs.md
docs/plans/: 2026-02-15-refactor-know-cli-v2-daemon-architecture-plan.md  2026-02-16-feat-10x-agent-search-ranking-plan.md  2026-02-16-feat-10x-search-quality-plan.md  2026-02-16-feat-progressive-disclosure-session-dedup-deep-context-plan.md  2026-02-16-fix-testing-issues-search-graph-performance-plan.md  2026-02-22-phase-3-10x-roadmap.md  2026-03-05-context-intelligence-upgrade-checklist.md
docs/solutions/architecture/: p2-p3-architectural-improvements.md
scripts/: release_pypi.sh
src/know/: IMPROVEMENTS.md  __init__.py  ai.py  cli.py  config.py  context_engine.py  daemon.py  daemon_db.py  diff.py  embeddings.py  exceptions.py  file_categories.py  generator.py  git_hooks.py  import_graph.py  index.py  knowledge_base.py  logger.py  mcp_server.py  memory_capture.py  model_router.py  models.py  parsers.py  path_filters.py  quality.py  query.py  ranking.py  runtime_context.py  scanner.py  semantic_search.py  skill_installer.py  stats.py  token_counter.py  watcher.py
src/know/cli/: __init__.py  __main__.py  agent.py  core.py  diff.py  doctor.py  hooks.py  knowledge.py  mcp.py  search.py  stats.py  usage.py
src/know/resources/: KNOW_SKILL.md  __init__.py
tests/: README.md  conftest.py  test_adversarial_regressions.py  test_agent_cli_improvements.py  test_ai_adversarial.py  test_call_refs.py  test_cli_io_adversarial.py  test_cli_simplification_aliases.py  test_config_adversarial.py  test_context_adversarial.py  test_context_intelligence_upgrade.py  test_doc_generation_quality.py  test_doctor_adversarial.py  test_doctor_command.py  test_efficiency.py  test_embeddings_adversarial.py  test_embeddings_resilience.py  test_feedback_regressions.py  test_hooks_cli_behavior.py  test_index_scope_cleanup.py  test_know.py  test_memory_10x.py  test_memory_adversarial.py  test_phase1_json_and_doctor.py  test_phase3_auto_background.py  test_phase3_warmup.py  test_phase4_memory_and_skill.py  test_phase5_benchmark_contract.py  test_phases_4_6_7.py  test_query_adversarial.py  test_query_understanding.py  test_runtime_lifecycle_adversarial.py  test_search_fallback_diagnostics.py  test_semantic_cache_adversarial.py  test_semantic_lane_adaptive.py  test_session_resolution.py  test_skill_effectiveness.py  test_skill_installer.py  test_stats_bounds_adversarial.py  test_storage_adversarial.py  (+12 more)
