[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "know-cli"
version = "0.3.0"
description = "Context Intelligence for AI Coding Agents — smart, token-budgeted code context"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sushil Kumar", email = "sushilk.1991@gmail.com" }
]
keywords = ["ai", "context", "coding-agent", "mcp", "cli", "codebase", "llm", "tokens", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "pathspec>=0.11.0",
    "xxhash>=3.0.0",
    "tiktoken>=0.5.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-c>=0.23.0",
]

[project.optional-dependencies]
search = [
    "fastembed>=0.3.0",
    "numpy>=1.24.0",
]
ai = [
    "anthropic>=0.8.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
know = "know.cli:main"

[project.urls]
Homepage = "https://github.com/vic/know-cli"
Repository = "https://github.com/vic/know-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/know"]
exclude = [
    "tests/",
    "tests/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
